@@ -1,4 +1,8 @@
-﻿w17 12.03.2015 17:40:22 +0300 - build 4304
+﻿zg 15.03.2015 03:02:46 +0200 - build 4305
+
+1. в ProcessEditorInput не посылаются псевдоклавиши KEY_IDLE и KEY_NONE.
+
+w17 12.03.2015 17:40:22 +0300 - build 4304
 
 1. Уточнение 4302.
 
